--- a/Jama/src/main/webapp/resources/dialogs/companyDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/companyDialog.xhtml
@@ -13,7 +13,7 @@
 <composite:implementation>
 
 	<h:outputScript name="hideShow.js" library="js" />
-	<h:outputScript name="companyScripts.js" library="js" />
+	<h:outputScript name="dialogScripts.js" library="js" />
 
 	<p:dialog id="#{cc.attrs.dialogId}" header="#{msgs.newCompanyTitle}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" onHide="refresh();">
 
