--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -21,7 +21,8 @@
 			<p:ajax event="tabChange" listener="#{agreementEditPB.handleFlow}"></p:ajax>
 
 			<p:tab id="tabDati" title="#{msgs.data_Tab}">
-				<sections:agreementWizData editingDisable="false" companyMenuId="companyMenu" companyMenuWidgetVar="w_companyMenu"  />
+				<sections:agreementWizData editingDisable="false" chiefDialogId="chiefDialog" chiefDialogWidgetVar="w_chiefDialog" chiefMenuId="chiefMenu"
+					chiefMenuWidgetVar="w_chiefMenu" companyMenuId="companyMenu" companyMenuWidgetVar="w_companyMenu" />
 			</p:tab>
 
 
@@ -64,11 +65,12 @@
 	</h:form>
 
 
-
+	<dialogs:chiefImportDialog dialogId="chiefDialog" dialogWidgetVar="w_chiefDialog" observingComponentId="chiefMenu"
+		observingComponentWidgetVar="w_chiefMenu" />
 
 	<dialogs:companyDialog dialogWidgetVar="w_companyDialog" editingDisable="false" observingComponentId="companyMenu"
 		observingComponentWidgetVar="w_companyMenu" dialogId="companyDialog" />
-		
+
 	<dialogs:instCreateDialog dialogWidgetVar="w_addInstDialog" dialogId="addInstDialog" wizWidgetVar="w_addInstWiz"
 		observingComponent="contractInstTablePanel" renderShareTable="#{agreementWizardPB.renderShareTable()}" />
 	<dialogs:instViewDialog dialogWidgetVar="w_editInstDialog" dialogId="editInstDialog" wizWidgetVar="w_editInstWiz"
