--- a/Jama/src/main/webapp/resources/dialogs/chiefImportDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/chiefImportDialog.xhtml
@@ -27,16 +27,18 @@
 					</p:column>
 
 					<p:column>
-						<h:inputText id="serial" value="#{chiefDialogPCB.chief.serialNumber}" label="#{msgs.serialNumber}" required="true" />
+						<h:inputText id="serial" value="#{chiefDialogPB.chief.serialNumber}" label="#{msgs.serialNumber}" required="true"
+							validator="#{chiefDialogPB.validateSerialNumber}">
+							<p:ajax event="valueChange" process="@this" update="chiefPanel" listener="#{chiefDialogPB.importUser()}" />
+						</h:inputText>
 					</p:column>
 
-					<p:column>
-						<p:commandButton value="#{msgs.import}" process="@this serial" update="chiefPanel" actionListener="#{chiefDialogPCB.importUser()}" />
-					</p:column>
+					<ui:remove>
+						<p:column>
+							<p:commandButton value="#{msgs.import}" process="@this serial" update="chiefPanel" actionListener="#{chiefDialogPB.importUser()}" />
+						</p:column>
+					</ui:remove>
 
-					<p:column>
-						<p:message styleClass="errorMessage" id="serialError" for="serial" />
-					</p:column>
 				</p:row>
 
 				<p:row>
@@ -45,11 +47,7 @@
 					</p:column>
 
 					<p:column>
-						<h:inputText id="name" value="#{chiefDialogPCB.chief.name}" label="#{msgs.name}" disabled="true" required="true" />
-					</p:column>
-
-					<p:column colspan="2">
-						<p:message for="name" />
+						<h:inputText id="name" value="#{chiefDialogPB.chief.name}" label="#{msgs.name}" disabled="true" required="true" />
 					</p:column>
 				</p:row>
 
@@ -59,11 +57,7 @@
 					</p:column>
 
 					<p:column>
-						<h:inputText id="surname" value="#{chiefDialogPCB.chief.surname}" label="#{msgs.surname}" disabled="true" required="true" />
-					</p:column>
-
-					<p:column colspan="2">
-						<p:message for="surname" />
+						<h:inputText id="surname" value="#{chiefDialogPB.chief.surname}" label="#{msgs.surname}" disabled="true" required="true" />
 					</p:column>
 				</p:row>
 
@@ -71,7 +65,7 @@
 
 			<p:commandButton process="@this" immediate="true" oncomplete="#{cc.attrs.dialogWidgetVar}.hide();" value="#{msgs.cancel}" />
 
-			<p:commandButton process="@form" value="#{msgs.save}" actionListener="#{chiefDialogPCB.save()}"
+			<p:commandButton process="@form" value="#{msgs.save}" actionListener="#{chiefDialogPB.save()}"
 				update="@form :#{p:component(cc.attrs.observingComponentId)}"
 				oncomplete="if (!args.validationFailed){ setHideShow(); #{cc.attrs.dialogWidgetVar}.hide(); setMenuValue(#{cc.attrs.observingComponentWidgetVar}, '#{cc.attrs.dialogId}', 'socialNumber' ); }" />
 
