--- a/Jama/src/main/webapp/resources/sections/user.xhtml
+++ b/Jama/src/main/webapp/resources/sections/user.xhtml
@@ -150,7 +150,7 @@
 		<p:commandButton value="#{msgs.cancel}" action="#{userEditor.cancel()}" immediate="true" oncomplete="w_confirm_cancel_user.hide()" />
 
 		<p:commandButton value="#{msgs.save}" process="@form" update="usrDataPanelGrid"
-			oncomplete="if (args && !args.validationFailed) {w_confirm_save_user.show();}" />
+			oncomplete="if (!args.validationFailed) {w_confirm_save_user.show();}" />
 
 		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.save}" severity="alert" widgetVar="w_confirm_save_user">
 			<p:commandButton value="#{msgs.yes}" action="#{userEditor.save()}" immediate="true" oncomplete="w_confirm_save_user.hide()" />
