--- a/Jama/src/main/webapp/userList.xhtml
+++ b/Jama/src/main/webapp/userList.xhtml
@@ -29,7 +29,7 @@
 			</p:column>
 
 			<p:column headerText="#{msgs.department}">
-				<h:outputText value="#{user.belongingDepts.get(0).displayName}" />
+				<h:outputText value="#{user.department.displayName}" />
 			</p:column>
 
 			<p:column headerText="#{msgs.email}">
