--- a/Jama/src/main/webapp/userList.xhtml
+++ b/Jama/src/main/webapp/userList.xhtml
@@ -6,11 +6,14 @@
 </h:head>
 
 <h:body>
-	<h:form>
+	<h:form id="tableForm">
 		<input type="hidden" name="cid" value='#{userTablePCB.conversation.id}' />
 
 		<p:dataTable id="userTable" emptyMessage="#{msgs.noUserFound}" lazy="true" value="#{userTablePCB.lazyModel}" var="user" paginator="true" rows="20"
-			rowsPerPageTemplate="10,20,50" paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}">
+			rowsPerPageTemplate="10,20,50" paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}" editable="true" editMode="cell" 
+			selection="#{userTablePCB.lazyModel.selectedUser}" selectionMode="single" rowKey="#{user.id}">
+
+			<p:ajax event="cellEdit" listener="#{userTablePCB.changeRole}" update=":tableForm:userTable" />
 
 			<p:column headerText="#{msgs.serialNumber}">
 				<h:outputText value="#{user.serialNumber}" />
@@ -25,7 +28,18 @@
 			</p:column>
 
 			<p:column headerText="#{msgs.role}">
-				<h:outputText value="#{user.role.displayString}" />
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.role.displayString}" />
+					</f:facet>
+
+					<f:facet name="input">
+						<p:selectOneMenu id="roleInput" value="#{user.role}" label="#{msgs.role}">
+							<f:selectItems value="#{utilPB.rolesItems}" />
+							<p:ajax event="valueChange" process="@this" />
+						</p:selectOneMenu>
+					</f:facet>
+				</p:cellEditor>
 			</p:column>
 
 			<p:column headerText="#{msgs.department}">
