fix lista contratti docente + dialogo ditte

--- a/Jama/src/main/webapp/chiefContractList.xhtml
+++ b/Jama/src/main/webapp/chiefContractList.xhtml
@@ -79,7 +79,7 @@
 			</p:column>
 
 			<p:column id="title" headerText="#{msgs.agrTitle}">
-				<h:outputText value="#{agr.shortTitle}" />
+				<h:outputText value="#{contract.shortTitle}" />
 			</p:column>
 
 			<p:column styleClass="companyFilterColumn" filterBy="#{contract.company.id}" headerText="#{msgs.company}" filterMatchMode="exact"
