--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -65,6 +65,12 @@
 					<f:setPropertyActionListener value="#{installment}" target="#{installmentManager.selectedInstallment}" />
 				</p:commandButton>
 			</p:column>
+			
+			<p:column headerText="#{msgs.taxableAmount}">
+				<h:outputText value="#{installment.wholeTaxableAmount}">
+					<f:attribute name="plain" value="false" />
+				</h:outputText>
+			</p:column>
 
 			<p:column headerText="#{msgs.amount}">
 				<h:outputText value="#{installment.wholeAmount}">
