--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -72,7 +72,7 @@
 				</h:outputText>
 			</p:column>
 
-			<p:column headerText="#{msgs.amount}">
+			<p:column headerText="#{msgs.wholeAmount}">
 				<h:outputText value="#{installment.wholeAmount}">
 					<f:attribute name="plain" value="false" />
 				</h:outputText>
