--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -14,9 +14,6 @@
 
 	<p:panel header="#{msgs.attachments_header}" styleClass="semiEmptyPanel">
 
-		<p:growl id="messages" showDetail="true" />
-
-
 		<p:dataTable id="attchsList" value="#{attachmentsPB.attachments}" var="file" emptyMessage="#{msgs.noAttachmentFound}"
 			styleClass="hideShow hide-column-names">
 			<p:column>
@@ -47,7 +44,7 @@
 
 
 		<p:fileUpload id="fileUpload" label="#{msgs.add_attachments}" auto="true" fileUploadListener="#{attachmentsPB.handleFileUpload}" multiple="true"
-			showButtons="false" dragDropSupport="true" update="messages attchsList" cancelLabel="#{msgs.remove}" uploadLabel="#{msgs.load}"
+			showButtons="false" dragDropSupport="true" update="attchsList" cancelLabel="#{msgs.remove}" uploadLabel="#{msgs.load}"
 			invalidSizeMessage="#{msgs.invalidFileSize}" invalidFileMessage="#{msgs.invalidFile}" rendered="#{cc.attrs.editingDisable == false}"
 			oncomplete="setHideShow();" />
 
