--- a/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
@@ -318,6 +318,7 @@
 			<p:columnGroup type="header">
 				<p:row>
 					<p:column headerText="#{msgs.shareTableInvolvedPersonnel}" />
+					<p:column headerText="#{msgs.shareTablePersonnelId}" />
 					<p:column colspan="2" headerText="#{msgs.share}" />
 					<p:column />
 				</p:row>
@@ -325,6 +326,19 @@
 
 			<p:column>
 				<h:outputText value="#{share.chiefScientist.completeName}" />
+			</p:column>
+			
+			<p:column>
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{share.id}" />
+					</f:facet>
+					<f:facet name="input">
+						<h:inputText value="#{share.id}" label="#{msgs.table_id}">
+							<p:ajax event="valueChange" process="@this" update="personnelShares" />
+						</h:inputText>
+					</f:facet>
+				</p:cellEditor>
 			</p:column>
 
 			<p:column>
@@ -359,11 +373,11 @@
 		<p:panelGrid id="personnalShareInput" style="width: 100%" rendered="#{cc.attrs.editingDisable == false}">
 
 			<p:row>
-				<p:column width="20%">
+				<p:column width="15%">
 					<h:outputText value="#{msgs.shareTableInvolvedPersonnel}" />
 				</p:column>
 
-				<p:column width="30%">
+				<p:column width="25%">
 					<p:selectOneMenu id="personnalShareChiefMenu" value="#{instShareTablePB.newShare.chiefScientist}" label="#{msgs.chief}" filter="true"
 						filterMatchMode="contains" disabled="#{cc.attrs.editingDisable}" required="#{not empty param[_instChiefShareAddBtn.clientId]}">
 						<f:selectItem itemLabel="#{msgs.select}" itemValue="#{null}" />
@@ -372,8 +386,18 @@
 						<p:ajax event="valueChange" process="@this" />
 					</p:selectOneMenu>
 				</p:column>
+				
+				<p:column width="10%">
+					<h:outputText value="#{msgs.shareTablePersonnelId}" />
+				</p:column>
 
-				<p:column width="20%">
+				<p:column width="10%">
+					<h:inputText value="#{agrShareTablePB.newShare.id}" label="#{msgs.shareTablePersonnelId}">
+						<p:ajax event="valueChange" process="@this" />
+					</h:inputText>
+				</p:column>
+
+				<p:column width="10%">
 					<h:outputText value="#{msgs.share}" />
 				</p:column>
 
