--- a/Jama/src/main/webapp/resources/sections/user.xhtml
+++ b/Jama/src/main/webapp/resources/sections/user.xhtml
@@ -62,35 +62,6 @@
 				</p:column>
 			</p:row>
 
-			<p:row>
-				<p:column>
-					<h:outputText value="#{msgs.department}:" />
-				</p:column>
-
-				<p:column>
-					<h:outputText value="#{userEditor.selectedDept.displayName}" />
-				</p:column>
-			</p:row>
-
-			<p:row>
-				<p:column>
-					<h:outputText value="#{msgs.role}: " />
-				</p:column>
-
-				<p:column>
-					<h:selectOneMenu id="type" value="#{userEditor.user.role}" label="#{msgs.role}" required="true" rendered="#{cc.attrs.mode == 'wizard'}">
-						<f:selectItems value="#{utilPB.rolesItems}" />
-						<f:ajax event="blur" execute="@this" render="typeError" />
-					</h:selectOneMenu>
-
-					<h:outputText value="#{userEditor.user.role.displayString}" rendered="#{cc.attrs.mode == 'profile'}" />
-				</p:column>
-
-
-				<p:column rendered="#{cc.attrs.mode == 'wizard'}">
-					<p:message styleClass="errorMessage" id="typeError" for="type" />
-				</p:column>
-			</p:row>
 
 			<p:row>
 				<p:column>
@@ -116,6 +87,172 @@
 				</p:column>
 
 
+			</p:row>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<p:row>
+
+				<p:row>
+					<p:column>
+						<h:outputText value="#{msgs.department}:" />
+					</p:column>
+
+					<p:column>
+						<h:outputText value="#{userEditor.selectedDept.displayName}" />
+					</p:column>
+				</p:row>
+
+				<p:panel>
+
+
+					<h:inputHidden value="needed" id="percentsCheck" validator="#{agrShareTablePB.validatePersonnelShares}" />
+					<p:message styleClass="errorMessage" for="percentsCheck" />
+
+					<br />
+
+					<p:dataTable id="personnelShares" value="#{agrShareTablePB.shares}" var="share" rowKey="#{share.chiefScientist}"
+						emptyMessage="#{msgs.noShareFound}" editable="true" editMode="cell">
+
+						<f:facet name="header">
+							<h:outputText value="#{msgs.shareTablePersonnel}" />
+						</f:facet>
+
+
+						<p:columnGroup type="header">
+							<p:row>
+								<p:column headerText="#{msgs.shareTableInvolvedPersonnel}" />
+								<p:column headerText="#{msgs.shareTablePersonnelId}" />
+								<p:column colspan="2" headerText="#{msgs.share}" />
+								<p:column />
+							</p:row>
+						</p:columnGroup>
+
+						<p:column>
+							<h:outputText value="#{share.chiefScientist.completeName}" />
+						</p:column>
+
+						<p:column>
+							<p:cellEditor>
+								<f:facet name="output">
+									<h:outputText value="#{share.id}" />
+								</f:facet>
+								<f:facet name="input">
+									<h:inputText value="#{share.id}" label="#{msgs.table_id}">
+										<p:ajax event="valueChange" process="@this" update="personnelShares" />
+									</h:inputText>
+								</f:facet>
+							</p:cellEditor>
+						</p:column>
+
+						<p:column>
+							<p:cellEditor>
+								<f:facet name="output">
+									<h:outputText value="#{share.value}" />
+									<h:outputText value=" %" />
+								</f:facet>
+								<f:facet name="input">
+									<h:inputText id="personnelTableShareValueInput" value="#{share.value}" label="#{msgs.table_share}">
+										<f:validator binding="#{percentValidator}" />
+										<p:ajax event="valueChange" process="@this" update="personnelShares" />
+									</h:inputText>
+									<h:outputText value=" %" />
+								</f:facet>
+							</p:cellEditor>
+						</p:column>
+
+						<p:column>
+							<h:outputText value="#{share.flatAmount}">
+								<f:attribute name="plain" value="false" />
+							</h:outputText>
+						</p:column>
+
+						<p:column>
+							<p:commandButton value="#{msgs.remove}" action="#{agrShareTablePB.removeShare(share)}" update="@form" process="@this"
+								rendered="#{not cc.attrs.editingDisable}" />
+						</p:column>
+
+					</p:dataTable>
+
+					<br />
+
+					<p:panelGrid id="personnalShareInput" style="width: 100%" rendered="#{cc.attrs.mode == 'wizard'}">
+
+						<p:row>
+							<p:column width="15%">
+								<h:outputText value="#{msgs.role}: " />
+							</p:column>
+
+							<p:column width="25%">
+								<p:selectOneMenu id="type" value="#{userEditor.user.role}" label="#{msgs.role}" filterMatchMode="contains"
+									disabled="#{cc.attrs.editingDisable}" required="#{not empty param[_contractChiefShareAddBtn.clientId]}">
+									<f:selectItem itemLabel="#{msgs.select}" itemValue="#{null}" />
+									<f:selectItems value="#{utilPB.rolesItems}" />
+									<f:ajax event="valueChange" execute="@this" />
+								</p:selectOneMenu>
+							</p:column>
+
+							<p:column width="10%">
+								<h:outputText value="#{msgs.shareTablePersonnelId}" />
+							</p:column>
+
+							<p:column width="10%">
+								<h:inputText value="#{agrShareTablePB.newShare.id}" label="#{msgs.shareTablePersonnelId}">
+									<p:ajax event="valueChange" process="@this" />
+								</h:inputText>
+							</p:column>
+
+							<p:column width="10%">
+								<h:outputText value="#{msgs.share}" />
+							</p:column>
+
+							<p:column width="10%">
+								<h:inputText id="personnalShareValueInput" value="#{agrShareTablePB.newShare.value}" label="#{msgs.share}">
+									<f:validator binding="#{percentValidator}" />
+									<f:ajax event="valueChange" execute="@this" render="percentPersonnelShare personnalShareValueInputError" />
+								</h:inputText>
+								<h:outputText value=" %" />
+							</p:column>
+
+							<p:column width="10%">
+								<h:outputText id="percentPersonnelShare" value="#{agrShareTablePB.newShare.flatAmount}">
+									<f:attribute name="plain" value="false" />
+								</h:outputText>
+							</p:column>
+
+							<p:column width="10%">
+								<p:commandButton value="#{msgs.add}" action="#{agrShareTablePB.addShare()}" update="personnalShareInput personnelShares"
+									process="personnalShareInput, @this" binding="#{_contractChiefShareAddBtn}" />
+							</p:column>
+						</p:row>
+
+						<p:row>
+							<p:column colspan="4">
+								<p:message autoUpdate="true" for="type" />
+							</p:column>
+						</p:row>
+
+						<p:row>
+							<p:column colspan="4">
+								<p:message autoUpdate="true" for="personnalShareValueInput" id="personnalShareValueInputError" />
+							</p:column>
+						</p:row>
+					</p:panelGrid>
+
+				</p:panel>
 			</p:row>
 
 
